# data-brasil

./: README.md  pyproject.toml
brasadata/: main.py
brasadata/fipe/: fipe.py  model_fipe.py
